# qwen3-asr-rs

./: .gitignore  Cargo.toml  README.md  SECURITY_REPORT.md  SECURITY_TODO.md
audio/: sample2.txt  sample4.txt  sample5.txt  sample6.txt
examples/: streaming_verify.rs  transcribe.rs
py_ref/: audio_encoder_config_0.6B.json  configuration_qwen3_asr.py  modeling_qwen3_asr.py  pipeline_notes.py  preprocessor_config.json  processing_qwen3_asr.py
src/: config.rs  decoder.rs  encoder.rs  hub.rs  inference.rs  lib.rs  main.rs  mel.rs  path_utils.rs  streaming.rs
tests/: cpu_inference.rs  streaming_integration.rs
