[package]
name = "qwen3-asr"
version = "0.1.0"
edition = "2021"
description = "Rust inference engine for Qwen3-ASR speech recognition models using candle"
license = "MIT"
repository = "https://github.com/alan890104/qwen3-asr-rs"
keywords = ["asr", "speech-recognition", "qwen3", "candle", "whisper"]
categories = ["multimedia::audio", "science::ml"]

[features]
default = ["metal"]
metal = ["candle-core/metal", "candle-nn/metal"]

[dependencies]
candle-core = { git = "https://github.com/huggingface/candle.git", rev = "38e7202145a8d264cf78e824edf2c31f6a438cdf" }
candle-nn = { git = "https://github.com/huggingface/candle.git", rev = "38e7202145a8d264cf78e824edf2c31f6a438cdf" }
tokenizers = { version = "0.22", features = ["onig"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hound = "3"
rubato = "0.15"
rustfft = "6"
anyhow = "1"
safetensors = "0.4"
