[package]
name = "qwen3-asr"
version = "0.1.0"
edition = "2021"
description = "Rust inference engine for Qwen3-ASR speech recognition models using candle"
license = "MIT"
repository = "https://github.com/alan890104/qwen3-asr-rs"
keywords = ["asr", "speech-recognition", "qwen3", "candle", "whisper"]
categories = ["multimedia::audio", "science"]
readme = "README.md"
include = ["src/**/*.rs", "README.md", "LICENSE"]
rust-version = "1.75"

[features]
default = ["metal"]
metal = ["candle-core/metal", "candle-nn/metal"]
cuda  = ["candle-core/cuda",  "candle-nn/cuda"]
hub   = ["dep:reqwest"]

[dependencies]
candle-core = "0.9.2"
candle-nn  = "0.9.2"
tokenizers = { version = "0.22", features = ["onig"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hound = "3"
rubato = "0.15"
rustfft = "6"
anyhow = "1"
log = "0.4"
safetensors = "0.4"
thiserror = "2"
reqwest = { version = "0.12", features = ["blocking"], optional = true }

[[example]]
name = "transcribe"
required-features = ["hub"]
