[package]
name = "qwen3-asr"
version = "0.2.2"
edition = "2021"
description = "Local speech-to-text (ASR) in Rust — Qwen3-ASR inference with Metal & CUDA GPU acceleration, batch and streaming transcription"
license = "MIT"
repository = "https://github.com/alan890104/qwen3-asr-rs"
keywords = ["speech-to-text", "asr", "speech-recognition", "transcription", "candle"]
categories = ["multimedia::audio", "science"]
readme = "README.md"
include = ["src/**/*.rs", "README.md", "LICENSE"]
rust-version = "1.75"

[features]
default = ["metal"]
metal = ["candle-core/metal", "candle-nn/metal"]
cuda  = ["candle-core/cuda",  "candle-nn/cuda"]
hub   = ["dep:reqwest"]
realtime = ["dep:dotenvy", "dep:cpal", "dep:clap", "dep:env_logger", "dep:ctrlc", "dep:libc", "hub"]

[dependencies]
candle-core = "0.9.2"
candle-nn  = "0.9.2"
tokenizers = { version = "0.22", features = ["onig"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hound = "3"
rubato = "0.15"
rustfft = "6"
anyhow = "1"
log = "0.4"
safetensors = "0.4"
thiserror = "2"
reqwest = { version = "0.12", features = ["blocking"], optional = true }
dotenvy = { version = "0.15", optional = true }
cpal = { version = "0.15", optional = true }
clap = { version = "4", features = ["derive"], optional = true }
env_logger = { version = "0.11", optional = true }
ctrlc = { version = "3", optional = true }
libc = { version = "0.2", optional = true }

[dev-dependencies]
env_logger = "0.11"

[package.metadata.docs.rs]
no-default-features = true

[[example]]
name = "transcribe"
required-features = ["hub"]

[[bin]]
name = "realtime"
path = "src/bin/realtime.rs"
required-features = ["realtime"]
